# redsift

./: .ghci  .gitignore  .travis.yml  README.md  default.nix  module.nix  redsift.cabal  redsift.config.sample  redsift.hs
Config/: lighttpd.conf.sample  redsift.config.sample
Redsift/: CGI.hs  Config.hs  DB.hs  Exception.hs  Mail.hs  SignUrl.hs
test/Redsift/: DBSpec.hs
www/: index.html
www/static/css/: foundation.min.css  redsift.css  style.css  tree_menu.css
www/static/js/: foundation.min.js  redsift.js
