name:                redsift
version:             0.1.0
synopsis:            Redshift web app for browsing and querying
license:             GPL-3
license-file:        LICENSE
author:              Chris Forno
maintainer:          jekor@jekor.com
copyright:           2013 Zalora
category:            Database
build-type:          Simple
cabal-version:       >=1.10

data-files:
    www/static/images/rs_view.png
    www/static/images/rs_tbl.png
    www/static/images/rs_db.png
    www/static/js/redsift.js
    www/static/js/foundation.min.js
    www/static/css/tree_menu.css
    www/static/css/redsift.css
    www/static/css/foundation.min.css
    www/index.html

executable redsift
  main-is:             redsift.hs
  build-depends:       aeson,
                       MissingH,
                       base >= 4.8,
                       directory,
                       bytestring,
                       configurator,
                       containers,
                       filepath,
                       hS3 >= 0.5,
                       HTTP,
                       http-types >= 0.8,
                       network >= 2.6,
                       network-uri >= 2.6,
                       optparse-applicative,
                       postgresql-libpq,
                       postgresql-simple,
                       safe,
                       mime-mail >= 0.4.4.2,
                       split,
                       string-conversions,
                       system-filepath,
                       text,
                       time,
                       utf8-string,
                       wai >= 3.2,
                       wai-app-static,
                       wai-extra,
                       warp >= 3.2
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

